Changes for 1.5:

 - added availability of using '%' character for key (Eugene)
 - added login/logout (Artem)
 - changed how is showed messages (Artem)
 - fixed compilation under FreeBSD (Eugene)
 - fixed XML export (Eugene)
 - improved management of timeline period (Eugene)
 - fixed configure with postgreSQL, thanks to "abi" (Eugene)
 - fixed errors for services.php (Artem)

Changes for 1.4:

 - changed IT Services interface (Artem)
 - fixed function diff() for floats (Alexei)
 - improved configuration scripts (Eugene)
 - fixed misc strict compilation issues (Alexei)
 - fixed compilation for solaris (Eugene)
 - some cleanup in update_triggers() (Alexei)
 - fixes related to processing of trigger statuses (Alexei)
 - fixed discovery crashes (Eugene)
 - fixed trigger description substitution for messages (Eugene)
 - fixed SQL schema for housekeeper (Eugene)
 - added delta value calculation for UINT64 (Eugene)
 - fixed log messages for auditlog (Eugene)
 - added ZABBIX Server to a host group (Alexei)
 - fixed default group for Admin/guest. (Alexei)
 - icmpping will be processed regardless of host availability (Alexei)
 - do not update trigger statuses to unknown for trapper items (Alexei)
 - fixed processing of {TRIGGER.VALUE} and {STATUS} (Alexei)
 - fixed displaying of special chars in trigger description (Alexei)
 - restored validation for hostname (Eugene)
 - splitted error message for trigger validation (Eugene)
 - fixed hitory severity (Eugene)
 - fixed user information displayed (Eugene)
 - fixed logfiles monitoring (Eugene)
 - fixed WEB monitoring (Eugene)
 - fixed SNMP discovery (Alexei)
 - documented use of -vv for zabbix_sender (Alexei)
 - fixed "plain text" and "history of actions" for screens (Eugene)

Changes for 1.3.8:

 - increased server side key length up to 256 (Eugene)
 - fixed active check communication (Eugene)
 - fixed eventlog (Eugene)
 - same step color for both graphs in Monitoring->WEB (Alexei)