@@ -46,6 +46,7 @@ include_once "include/page_header.php";
 
 		"groupid"=>	array(T_ZBX_INT, O_OPT,	null,	DB_ID,		null),
 		"hosts"=>	array(T_ZBX_INT, O_OPT,	null,	DB_ID,		null),
+		"templates"=>	array(T_ZBX_INT, O_OPT,	null,	DB_ID,		null),
 		"items"=>	array(T_ZBX_INT, O_OPT,	null,	DB_ID,		null),
 		"triggers"=>	array(T_ZBX_INT, O_OPT,	null,	DB_ID,		null),
 		"graphs"=>	array(T_ZBX_INT, O_OPT,	null,	DB_ID,		null),
@@ -72,7 +73,7 @@ include_once "include/page_header.php";
 	if($config == 1)
 	{
 		$rules = get_request('rules', array());
-		foreach(array('host', 'item', 'trigger', 'graph') as $key)
+		foreach(array('host', 'template', 'item', 'trigger', 'graph') as $key)
 		{
 			if(!isset($rules[$key]['exist']))	$rules[$key]['exist']	= 0;
 			if(!isset($rules[$key]['missed']))	$rules[$key]['missed']	= 0;
@@ -86,6 +87,7 @@ include_once "include/page_header.php";
 		$available_hosts = get_accessible_hosts_by_user($USER_DETAILS,PERM_READ_ONLY,null,PERM_RES_IDS_ARRAY,$ZBX_CURNODEID);
 
 		$hosts		= get_request('hosts', array());
+		$templates	= get_request('templates', array());
 		$items		= get_request('items', array());
 		$graphs		= get_request('graphs', array());
 		$triggers	= get_request('triggers', array());
@@ -100,6 +102,7 @@ include_once "include/page_header.php";
 		}
 		
 		$hosts		= zbx_array_val_inc(array_flip(array_intersect(array_keys($hosts),	$available_hosts)));
+		$templates	= zbx_array_val_inc(array_flip(array_intersect(array_keys($templates),	array_keys($hosts))));
 		$items		= zbx_array_val_inc(array_flip(array_intersect(array_keys($items),	array_keys($hosts))));
 		$graphs		= zbx_array_val_inc(array_flip(array_intersect(array_keys($graphs),	array_keys($hosts))));
 		$triggers	= zbx_array_val_inc(array_flip(array_intersect(array_keys($triggers),	array_keys($hosts))));
@@ -114,7 +117,7 @@ include_once "include/page_header.php";
 		include_once "include/export.inc.php";
 		
 		$exporter = new CZabbixXMLExport();
-		$exporter->Export($hosts,$items,$triggers,$graphs);
+		$exporter->Export($hosts,$templates,$items,$triggers,$graphs);
 
 		unset($exporter);
 	}
@@ -148,7 +151,7 @@ include_once "include/page_header.php";
 			include_once "include/import.inc.php";
 
 			$importer = new CZabbixXMLImport();
-			$importer->SetRules($rules['host'],$rules['item'],$rules['trigger'],$rules['graph']);
+			$importer->SetRules($rules['host'],$rules['template'],$rules['item'],$rules['trigger'],$rules['graph']);
 			$importer->Parse($_FILES['import_file']['tmp_name']);
 
 			unset($importer);
@@ -163,6 +166,7 @@ include_once "include/page_header.php";
 		$table->SetHeader(array(S_ELEMENT, S_EXISTING, S_MISSING),'bold');
 
 		foreach(array(	'host'		=> S_HOST,
+				'template'	=> S_TEMPLATE,
 				'item'		=> S_ITEM,
 				'trigger'	=> S_TRIGGER,
 				'graph'		=> S_GRAPH)
@@ -173,7 +177,7 @@ include_once "include/page_header.php";
 			$cmbExist->AddItem(1, S_SKIP);
 			
 			$cmbMissed = new CComboBox('rules['.$key.'][missed]', $rules[$key]['missed']);
-			$cmbMissed->AddItem(0, S_ADD);
+			($key == 'template')?(''):($cmbMissed->AddItem(0, S_ADD));
 			$cmbMissed->AddItem(1, S_SKIP);
 
 			$table->AddRow(array($title, $cmbExist, $cmbMissed));
@@ -198,6 +202,11 @@ include_once "include/page_header.php";
 			{
 				$el_table = new CTableInfo(S_ONLY_HOST_INFO);
 				$sqls = array(
+					S_TEMPLATE	=> !isset($templates[$host['hostid']]) ? null : 
+								' SELECT ht.hostid, h.host as info, count(distinct ht.hosttemplateid) as cnt '.
+								' FROM hosts h, hosts_templates ht '.
+								' WHERE ht.templateid = h.hostid '.
+								' GROUP BY h.host',
 					S_ITEM		=> !isset($items[$host['hostid']]) ? null : 
 								' select hostid, description as info, 1 as cnt from items'.
 								' where hostid='.$host['hostid'],
@@ -234,6 +243,7 @@ include_once "include/page_header.php";
 			$form->AddVar("config",		$config);
 			$form->AddVar('update',		true);
 			$form->AddVar('hosts',		$hosts);
+			$form->AddVar('templates',	$templates);
 			$form->AddVar('items', 		$items);
 			$form->AddVar('graphs', 	$graphs);
 			$form->AddVar('triggers',	$triggers);
@@ -285,6 +295,8 @@ include_once "include/page_header.php";
 				S_IP,
 				S_PORT,
 				S_STATUS,
+				array(	new CCheckBox("all_templates",true, "CheckAll('".$form->GetName()."','all_templates','templates');"),
+					S_TEMPLATES),
 				array(	new CCheckBox("all_items",true, "CheckAll('".$form->GetName()."','all_items','items');"),
 					S_ITEMS),
 				array(	new CCheckBox("all_triggers",true, "CheckAll('".$form->GetName()."','all_triggers','triggers');"),
@@ -318,17 +330,23 @@ include_once "include/page_header.php";
 					$row["host"]
 					));
 				
-				if($row["status"] == HOST_STATUS_MONITORED){
-					$status=new CSpan(S_MONITORED, "off");
-				} else if($row["status"] == HOST_STATUS_NOT_MONITORED) {
-					$status=new CSpan(S_NOT_MONITORED, "on");
-				} else if($row["status"] == HOST_STATUS_TEMPLATE)
-					$status=new CCol(S_TEMPLATE,"unknown");
-				else if($row["status"] == HOST_STATUS_DELETED)
-					$status=new CCol(S_DELETED,"unknown");
-				else
-					$status=S_UNKNOWN;
+				$status = new CCol(host_status2str($row['status']),host_status2style($row['status']));
 				
+				
+				/* calculate template */
+				$template_cnt = DBfetch(DBselect('select count(hosttemplateid) as cnt from hosts_templates where hostid='.$row['hostid']));
+				if($template_cnt['cnt'] > 0)
+				{
+					$template_cnt = array(new CCheckBox('templates['.$row['hostid'].']',
+							isset($templates[$row['hostid']]) || !isset($update),
+							NULL,true),
+						$template_cnt['cnt']);
+				}
+				else
+				{
+					$template_cnt = '-';
+				}
+								
 				/* calculate items */
 				$item_cnt = DBfetch(DBselect('select count(itemid) as cnt from items where hostid='.$row['hostid']));
 				if($item_cnt['cnt'] > 0)
@@ -403,6 +421,7 @@ include_once "include/page_header.php";
 					$ip,
 					$port,
 					$status,
+					$template_cnt,
 					$item_cnt,
 					$trigger_cnt,
 					$graph_cnt
