@@ -31,11 +31,18 @@
 			$this->sub_node	= null;
 			$this->data	= null;
 			$this->host	= array('exist' => 0, 'missed' => 0);
+			$this->template	= array('exist' => 0, 'missed' => 0);
 			$this->item	= array('exist' => 0, 'missed' => 0);
 			$this->trigger	= array('exist' => 0, 'missed' => 0);
 			$this->graph	= array('exist' => 0, 'missed' => 0);
 			
 			$this->accessible_groups = get_accessible_groups_by_user($USER_DETAILS,
+				PERM_READ_WRITE, null, PERM_RES_IDS_ARRAY, $ZBX_CURNODEID);
+
+			$this->accessible_hosts = get_accessible_hosts_by_user($USER_DETAILS,
+				PERM_READ_WRITE, null, PERM_RES_IDS_ARRAY, $ZBX_CURNODEID);
+				
+			$this->accessible_nodes = get_accessible_nodes_by_user($USER_DETAILS,
 				PERM_READ_WRITE, null, PERM_RES_IDS_ARRAY, $ZBX_CURNODEID);
 		}
 		
@@ -59,9 +66,9 @@
 						}
 						else
 						{
-							error('Unsupported version of imported data');
+							error(S_UNSUPPORTED_VERSION_OF_IMPORTED_DATA);
 						}
-				error('Unsupported file format');
+				error(S_UNSUPPORTED_FILE_FORMAT);
 				$this->root = false;
 			}
 			elseif(!$this->root)
@@ -95,6 +102,10 @@
 							info('Host ['.$data['name'].'] skipped - user rule');
 							break; // case
 						}
+						if(!in_array($host_data['hostid'], $this->accessible_hosts)){
+							error('Host ['.$data['name'].'] skipped - Access deny.');
+							break; // case
+						}
 
 						$data['hostid']		= $host_data['hostid'];
 						$data['templates']	= get_templates_by_hostid($host_data['hostid']);
@@ -105,6 +116,11 @@
 						{
 							$data['skip'] = true;
 							info('Host ['.$data['name'].'] skipped - user rule');
+							break; // case
+						}
+						
+						if(!in_array($ZBX_CURNODEID, $this->accessible_nodes)){
+							error('Host ['.$data['name'].'] skipped - Access deny.');
 							break; // case
 						}
 
@@ -127,6 +143,7 @@
 					$this->sub_node	= null;
 					array_push($this->main_node, $name);
 					break; // case
+				case XML_TAG_TEMPLATE:
 				case XML_TAG_ITEM:
 				case XML_TAG_TRIGGER:
 				case XML_TAG_GRAPH_ELEMENT:
@@ -140,6 +157,7 @@
 				case XML_TAG_GROUPS:
 				case XML_TAG_ZABBIX_EXPORT:
 				case XML_TAG_APPLICATIONS:
+				case XML_TAG_TEMPLATES:
 				case XML_TAG_ITEMS:
 				case XML_TAG_TRIGGERS:
 				case XML_TAG_GRAPHS:
@@ -169,7 +187,7 @@
 			switch($name)
 			{
 				case XML_TAG_HOST:
-					if($data['skip'] || !$data['hostid'])
+					if($data['skip'] || !isset($data['hostid']) || !$data['hostid'])
 						break; // case
 					
 					if(!isset($data['port']))	$data['port']	= 10050;
@@ -227,6 +245,27 @@
 
 					$this->data[XML_TAG_ITEM]['applications'][] = $applicationid;
 
+					break; // case
+				case XML_TAG_TEMPLATE:
+					if(!isset($this->data[XML_TAG_HOST]['hostid']) || !$this->data[XML_TAG_HOST]['hostid'])
+						break; //case
+
+					if(!($template = DBfetch(DBselect('SELECT DISTINCT host, hostid '.
+								' FROM hosts'.
+								' WHERE '.DBid2nodeid('hostid').'='.$ZBX_CURNODEID.
+									' AND host='.zbx_dbstr($this->element_data)))))
+					{
+						error('Missed template ['.$this->element_data.']');
+						break; // case
+					}
+					
+					if(!in_array($template["hostid"], $this->accessible_hosts))
+					{
+						error('Template ['.$this->element_data.'] skipped - Access deny.');
+						break; // case
+					}
+
+					$this->data[XML_TAG_HOST]['templates'][$template["hostid"]] = $template['host'];
 					break; // case
 				case XML_TAG_ITEM:
 					if(!isset($this->data[XML_TAG_HOST]['hostid']) || !$this->data[XML_TAG_HOST]['hostid'])
@@ -646,9 +685,10 @@
 			return true;
 		}
 
-		function SetRules($host, $item, $trigger, $graph)
+		function SetRules($host, $template, $item, $trigger, $graph)
 		{
 			$this->host	= $host;
+			$this->template = $template;
 			$this->item	= $item;
 			$this->trigger	= $trigger;
 			$this->graph	= $graph;
